src/App.css
/* .App { */
  /* text-align: center; */
  /* background-color: #2c3e50; */
  /* background-color: #627366;
  color: #ffffff; */
/* } */

.App {
  /* background-color: #627366; */
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  /* font-size: calc(10px + 2vmin); */
  /* color: #ffffff; */
  font-family: all-round-gothic, sans-serif;
  font-weight: 400;
  font-style: normal;
};

ul {
  list-style-type: none;
}
li {
  padding: 0;
  display: inline-flex;
  margin: 0 10px;
}
a {
  color: #627366;
  font-size: 18px;
  text-decoration: none;
  padding: 5px 0px 5px 0px;
}

a:hover {
  color: #939597;
  /* background-color: #ffffff; */
  text-shadow: 0.5px 0.5px 1px #000000;
}

h3 {
  font-size: 46px;
  margin: 10px;
  font-weight: 200;
  color: #ffffff;
}
h4 {
  font-size: 24px;
  margin: 10px;
  font-weight: 300;
  color: #ffffff;
}
/* h5 {
  font-size: 18px; */
  /* margin */
  /* color: #939597;
} */

p {
  font-size: 18px;
  color: #627366;
  font-weight: 300;
  margin-bottom: 20px;
}


.split {
  height: 100%;
  width: 50%;
  position: fixed;
  z-index: 1;
  top: 0;
  overflow-x: hidden;
  padding-top: 20px;
}

/* Control the left side */
.left {
  left: 0;
  background-color: #627366;
}

/* Control the right side */
.right {
  right: 0;
  background-color: #ffffff;
  color: 627366;
}

/* ontent centered horizontally and vertically */
.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  text-align: center;
}

/* responsive css */

/* @media only screen and (min-width: 768px) and (max-width: 991px){
  .left {
    top: 0
  }
  .split {
    height: 50%;
    width: 100%;
    padding-top: 0;
  }

  .right {
    top: 512px;
  }


} */

@media only screen and (max-width: 767px) {
  .left {
    top: 0;
  }
  .split {
    height: 50%;
    width: 100%;
    padding-top: 0;
  }
  .right {
    top: 240px;
  }
  .split h2 {
    font-size: 22px;
  }
  .split h4 {
    font-size: 18px;
  }
  .split p {
    font-size: 12px;
  }
  .split ul>li>a {
    font-size: 10px;
  }
}





/* .App-link {
  color: #61dafb;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  } */

  /* @media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
} */
/* } */

